Fix the rogue spacing in this component

--- a/src/flickypedia/uploadr/static/assets/get_photos.scss
+++ b/src/flickypedia/uploadr/static/assets/get_photos.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.which_photos_can_be_uploaded .highlight {
+  margin-right: 0;
+}
+
 form#get_photos {
   .inputs {
     display: grid;
